kube/hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: nginx  # Utilisation de l'image Nginx de base
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
  # (Optional): Annotations for the Ingress Controller
  # -- ingress class is needed when traefik is not the default
  # kubernetes.io/ingress.class: traefik
  # ---
  # -- entrypoint and tls configurations
  # traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
  # traefik.ingress.kubernetes.io/router.tls: "true"
  # ---
  # -- optional middlewares
  # traefik.ingress.kubernetes.io/router.middlewares:your-middleware@kubernetescrd
  # ---
spec:
  rules:
#    - host: "kube.local"
#      http:
#        paths:
#          - path: /ngnix
#            pathType: Prefix
#            backend:
#              service:
#                name: hello-world-service
#                port:
#                  number: 80
      - http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: pgadminservice
                  port:
                    number: 5050
  # (Optional) TLS settings
  # tls:
  # - hosts:
  #   - your-hostname.com  # Your hostname
  #   secretName: your-secret  # Your TLS Secret
  # ---
